error.txt
   Compiling dft v0.1.0 (/home/nbrr/dev/dft)
error[E0277]: the trait bound `diesel_async::AsyncPgConnection: DerefMut` is not satisfied
  --> src/main.rs:44:10
   |
44 |         .get_result(c) // <-- this has an error
   |          ^^^^^^^^^^ the trait `DerefMut` is not implemented for `diesel_async::AsyncPgConnection`, which is required by `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Uuid, &uuid::Uuid>>>, DefaultableColumnInsertValue<ColumnInsertValue<columns::field, diesel::expression::bound::Bound<diesel::sql_types::Text, &std::string::String>>>), table>>: rocket_db_pools::diesel::methods::LoadQuery<'_, _, _>`
   |
   = note: required for `diesel_async::AsyncPgConnection` to implement `rocket_db_pools::diesel::AsyncConnection`
   = note: required for `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<id, ...>>, ...), ...>>` to implement `rocket_db_pools::diesel::methods::LoadQuery<'_, diesel_async::AsyncPgConnection, _>`
   = note: the full name for the type has been written to '/home/nbrr/dev/dft/target/debug/deps/dft-de00aed257cca7d3.long-type-17174836076899481199.txt'
   = note: consider using `--verbose` to print the full type name to the console

For more information about this error, try `rustc --explain E0277`.
error: could not compile `dft` (bin "dft") due to 1 previous error
